[gd_scene load_steps=7 format=3 uid="uid://b7oucwvtq3thv"]

[ext_resource type="Script" path="res://Scenes/Icon.gd" id="1_u53na"]
[ext_resource type="Texture2D" uid="uid://b3qqe25ha315u" path="res://Assets/Sprites/Icons/antivirus.png" id="2_yfbjp"]
[ext_resource type="FontFile" uid="uid://cub0l5xynqef0" path="res://Assets/Fonts/W95FA.otf" id="3_3l5tq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n3rmc"]
atlas = ExtResource("2_yfbjp")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmv3t"]
atlas = ExtResource("2_yfbjp")
region = Rect2(48, 0, 48, 48)

[sub_resource type="LabelSettings" id="LabelSettings_cyspg"]
font_size = 12

[node name="Icon" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u53na")

[node name="FocusedBackground" type="ColorRect" parent="."]
visible = false
modulate = Color(0.77084, 0.770839, 0.770839, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.650128, 0.650128, 0.650128, 1)

[node name="Image" type="TextureButton" parent="."]
custom_minimum_size = Vector2(48, 48)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = SubResource("AtlasTexture_n3rmc")
texture_focused = SubResource("AtlasTexture_bmv3t")

[node name="Label" type="Label" parent="Image"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -27.0
offset_right = 27.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_3l5tq")
theme_override_font_sizes/font_size = 12
text = "AntiVirus"
label_settings = SubResource("LabelSettings_cyspg")
horizontal_alignment = 1

[connection signal="focus_entered" from="Image" to="." method="_on_image_focus_entered"]
[connection signal="focus_exited" from="Image" to="." method="_on_image_focus_exited"]
